--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,11 +1,17 @@
 {% extends "partials/base.html" %}
+{% load crispy_forms_tags %}
 {% block content %} 
  <div class="container">
     <div class="row mt-5 pt-3">
         <div class="col-md-4">
             <div class="card my-3 shadow" >
                 <div class="card-body" >
-                    <h3>form</h3>
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <input class='btn btn-primary btn-block' type="submit" value="post">
+
+                    </form>
                 </div>
             </div>
         </div>
