--- a/blog/templates/partials/nav.html
+++ b/blog/templates/partials/nav.html
@@ -2,7 +2,7 @@
    
     <div class="container">
       {% if request.user.is_authenticated %}
-      <a class="navbar-brand text-white" href="#">PostScribers</a>
+      <a class="navbar-brand text-white" href="{% url 'blog-index' %}">PostScribers</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
@@ -13,17 +13,17 @@
           <a class="nav-link text-white" href="#">Profile <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Logout</a>
+          <a class="nav-link text-white" href="{% url 'users-logout' %}">Logout</a>
         </li>
 
       </ul>
       {% else %}
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link text-white" href="#">Sign Up <span class="sr-only">(current)</span></a>
+          <a class="nav-link text-white" href="{% url 'users-sign-up' %}">Sign Up <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Login</a>
+          <a class="nav-link text-white" href="{% url 'users-login' %}"> Login </a>
         </li>
 
       </ul>
