--- a/blog/templates/users/login.html
+++ b/blog/templates/users/login.html
@@ -4,7 +4,7 @@
 {% block content %} 
  <div class="container">
     <div class="row mt-5 pt-3">
-        <div class="col-md-5 offset-md-6">
+        <div class="col-md-6 offset-md-3">
             <div class="card my-3 shadow" >
                 <div class="card-body" >
                     <h2 class="text-center">Login Page</h2>
@@ -15,6 +15,14 @@
                         <input class='btn btn-primary btn-block' type="submit" value="Login">
 
                     </form>
+                    <hr>
+                    <div class="text-center my-3">
+                        <a href="">Forget Password</a>
+                    </div>
+                    <hr>
+                    <div class="text-center">
+                    <a class="btn btn-success" href={% url 'users-sign-up' %}>Create an Account</a>
+                    </div>
                 </div>
             </div>
         </div>
