--- a/blog/templates/users/logout.html
+++ b/blog/templates/users/logout.html
@@ -1,34 +1,27 @@
 {% extends "partials/base.html" %}
-{% block title %}Logout Page{% endblock %}
+{% block title %}Logout page{% endblock %}
 {% load crispy_forms_tags %}
-{% block content %}
-<div class="container">
+{% block content %} 
+ <div class="container">
     <div class="row mt-5 pt-3">
-        <div class="col-md-6 offset-md-3"> <!-- Adjusted offset for better centering -->
-            <div class="card my-3 shadow">
-                <div class="card-body">
+        <div class="col-md-6 offset-md-3">
+            <div class="card my-3 shadow" >
+                <div class="card-body" >
                     <h2 class="text-center">Logout Page</h2>
                     <hr>
-                    
-                    <!-- Logout Form -->
-                    <form method="post" action="{% url 'logout' %}">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-danger btn-block">Logout</button> <!-- Full-width button -->
-                    </form>
+                    <div class="alert alert-info">
 
-                    <!-- Logout Message -->
-                    <div class="alert alert-info text-center mt-4">
-                        You have been logged out successfully.
+                    You Have been Logged Out!
                     </div>
-                    
-                    <!-- Navigation Buttons -->
-                    <div class="text-center mt-3">
-                        <a href="{% url 'login' %}" class="btn btn-primary">Log in Again</a>
-                        <a href="/" class="btn btn-secondary">Return to Home</a>
-                    </div>
+                    <a href="{% url 'users-login' %}">Login</a>
                 </div>
             </div>
         </div>
-    </div>
-</div>
+       
+    </div>    
+ </div>   
+
 {% endblock %}
+
+   
+    
