--- a/blog/templates/users/profile.html
+++ b/blog/templates/users/profile.html
@@ -15,7 +15,7 @@
                 <hr>
                   <div class="row">
                     <div class="col-md-4">
-                        <img src="{{ user.profilmodel.image.url }}" alt="Profile Picture" class="rounded-circle">
+                        <img class='img-thumbnail' src="{{ user.profilemodel.image.url }}" alt="Profile Picture">
                   </div>
                   <div class="col-md-8">
                     <h5 class="card-title">Name: {{ user.username }}</h5>
