worked on edit Profile details

--- a/blog/templates/users/login.html
+++ b/blog/templates/users/login.html
@@ -2,6 +2,7 @@
 {% block title %}Login page{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %} 
+<div class="cover">
  <div class="container">
     <div class="row mt-5 pt-3">
         <div class="col-md-6 offset-md-3">
@@ -29,6 +30,7 @@
        
     </div>    
  </div>   
+</div> 
 
 {% endblock %}
 
