--- a/blog/templates/users/sign_up.html
+++ b/blog/templates/users/sign_up.html
@@ -2,6 +2,8 @@
 {% block title %}Sign_Up page{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %} 
+<div class="cover">
+
  <div class="container">
     <div class="row mt-5 pt-3">
         <div class="col-md-6 offset-md-3">
@@ -20,7 +22,8 @@
         </div>
        
     </div>    
- </div>   
+ </div> 
+</div>  
 
 {% endblock %}
 
