--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,5 @@
 {% extends "partials/base.html" %}
-{% block title %}Home Page{% endblock %}
+{% block title %}Post Detail Post{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %} 
  <div class="container">
@@ -9,18 +9,26 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-4">
-                            <img src="" alt="profile-img">
+                            <img  class="img-thumbnail" src="{{ post.author.profilemodel.image.url }}" alt="profile-img">
                         </div>
                         <div class="col-md-8">
-                            <small>{{ post.date_created   }}</small>
+                            <small>{{ post.date_created }}</small>
+                            {% if post.author == request.usr %}
+                            <span>
+                                <a class="btn btn-danger float-right btn-sm" href="{% url 'blog-post-delete' post.id %}">Delete</a>
+                            </span>
+                            <span>
+                                <a class="btn btn-primary mx-2 float-right btn-sm" href="{% url 'blog-post-edit' post.id %}">Edit</a>
+
+                            </span>
+                            {% endif %}
                             <hr>
                             <h4>{{ post.title }}</h4>
                             <p>
                                 {{ post.content }}
-                            </P>
-
+                            </p>
                         </div>
-                    </div>
+                     </div>
                 </div>
             </div>
         </div>
