--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,7 +13,7 @@
                         </div>
                         <div class="col-md-8">
                             <small>{{ post.date_created }}</small>
-                            {% if post.author == request.usr %}
+                            {% if post.author == request.user or request.user.is_superuser %}
                             <span>
                                 <a class="btn btn-danger float-right btn-sm" href="{% url 'blog-post-delete' post.id %}">Delete</a>
                             </span>
@@ -29,6 +29,26 @@
                             </p>
                         </div>
                      </div>
+                     <p class="mt-3">
+                        <a class="" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                          Comments:{{ post.comment_count }}
+                        </a>
+                      </p>
+                      <div class="collapse" id="collapseExample">
+                        <div  style="height:250px; overflow-y: scroll;" class="card card-body">
+                            {% for comment in post.comment %}
+                            <p  class="text-justify">
+                                {{ comment.content }}
+                            </p>
+                            {% endfor %}
+                        </div>
+                      </div>
+                      <form method="POST" action="{% url 'blog-post-detail' post.id %}">
+                        {% csrf_token %}
+                        {{ c_form|crispy }}
+                        <button type="submit" class="btn btn-primary btn-sm">Post Comment</button>
+
+                      </form>
                 </div>
             </div>
         </div>
